# vtcomposite

./: .gitignore  .gitmodules  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TUTORIAL.md  _bash  binding.gyp  codecov.yml  common.gypi  mason-versions.ini  package-lock.json  package.json
.github/workflows/: release.yml
bench/: bench.js  node-mapnik.bench.js  rules.js  vtcomposite-rules.js  vtcomposite.bench.js
cloudformation/: ci.template  ci.template.js
cmake/: symbols.ld  symbols.txt
lib/: index.js
scripts/: generate_compile_commands.py  sanitize.sh
src/: deflate.hpp  extract_geometry.hpp  feature_builder.hpp  module.cpp  module_utils.hpp  vtcomposite.cpp  vtcomposite.hpp  zoom_coordinates.hpp  zxy_extent.hpp  zxy_math.hpp
test/: hello.test.js  test-utils.js  vtcomposite-composite-param-validation.test.js  vtcomposite-internationalize.test.js  vtcomposite-linestrings.test.js  vtcomposite-localize-class.test.js  vtcomposite-localize-language.test.js  vtcomposite-localize-param-validation.test.js  vtcomposite-localize-worldview.test.js  vtcomposite-localize.test.js  vtcomposite-multis.test.js  vtcomposite-non-localize.test.js  vtcomposite-param-validation.test.js  vtcomposite-points.test.js  vtcomposite-polygons.test.js  vtcomposite.test.js
test/fixtures/: 0.mvt  1.mvt  2.mvt  3.mvt  4.mvt  5.mvt  empty-overzoom-8-33-63.mvt  four-linestring-quadrants.mvt  four-linestrings.js  four-points-z0.geojson  four-points.js  four-quadrants.mvt  mapbox-vector-terrain-v2-hillshade-15-6105-12723.mvt  multiline.mvt  multipoint.mvt  multipolygon.mvt  points-poi-sf-15-5239-12666.js  polygon-with-hole.mvt  polygons-hillshade-sf-15-5239-12666.mvt  polygons-with-holes-4-13-6.mvt  simple-line.mvt  simple_line.js  v1-6.mvt  v1-7.mvt  v1-8.mvt  v1-multipoint.mvt  z15-road-segments.mvt
test/fixtures/invalid-geom/: chimani.hojsv2t9-14-5088-5937.vector.pbf  mapbox.mapbox-streets-v7-14-5088-5937.vector.pbf  mapbox.mapbox-terrain-v2-14-5088-5937.vector.pbf
viz/: app.js  index.html  package-lock.json  package.json  sphermerc.js
viz/fixtures/: lines.mvt  points.mvt  polygons.mvt
viz/views/: index.html
